[package]
name = "groth16_proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-groth16 = { version = "0.3.0", default-features = false }
ark-ff = { version = "0.3.0", default-features = false }
ark-bls12-381 = { version = "0.3.0", default-features = false, features = ["curve"] }
ark-relations = { version = "0.3.0", default-features = false }
ark-std = { version = "0.3.0", default-features = false }
ark-serialize = { version = "0.3.0", default-features = false, features = [ "derive" ] }
ark-r1cs-std = { version = "0.3.0", default-features = false }
